Added links for settings

--- a/pages/delivery_request_seeker/delivery_inprogress_seeker.html
+++ b/pages/delivery_request_seeker/delivery_inprogress_seeker.html
@@ -70,7 +70,7 @@
             <li><a href="./../delivery_request_seeker/delivery_request_seeker.html">Home</a></li>
             <li><a href="./../history/history.html">History</a></li>
             <li><a href="../about_us/about_us.html">About Us</a></li>
-            <li><a href="">Settings</a></li>
+            <li><a href="./../settings/settings.html">Settings</a></li>
         </ul>
     </nav>
 
