--- a/pages/about_us/about_us.html
+++ b/pages/about_us/about_us.html
@@ -40,13 +40,13 @@
                 </li>
 
                 <li>
-                    <a href="../about_us/about_us.html">
+                    <a href="./../about_us/about_us.html">
                         <span class="active visually-hidden-text">About Us</span>
                     </a>
                 </li>
 
                 <li>
-                    <a href="../settings/settings.html">
+                    <a href="./../settings/settings.html">
                         <span class="visually-hidden-text">Settings</span>
                     </a>
                 </li>
@@ -62,8 +62,8 @@
         <ul>
             <li><a href="./../delivery_request_seeker/delivery_request_rider.html">Home</a></li>
             <li><a href="./../history/history.html">History</a></li>
-            <li><a href="../about_us/about_us.html">About Us</a></li>
-            <li><a href="">Settings</a></li>
+            <li><a href="./../about_us/about_us.html">About Us</a></li>
+            <li><a href="./../settings/settings.html">Settings</a></li>
         </ul>
     </nav>
 
