--- a/pages/settings/vehicle_settings.html
+++ b/pages/settings/vehicle_settings.html
@@ -34,7 +34,7 @@
                 </li>
 
                 <li>
-                    <a href="../settings/settings.html">
+                    <a href="./../settings/settings.html">
                         <span class="active visually-hidden-text">Settings</span>
                     </a>
                 </li>
@@ -49,7 +49,7 @@
         <ul>
             <li><a href="./../delivery_request_seeker/delivery_request_rider.html">Home</a></li>
             <li><a href="./../history/history.html">History</a></li>
-            <li><a href="../about_us/about_us.html">About Us</a></li>
+            <li><a href="./../about_us/about_us.html">About Us</a></li>
             <li><a href="./../settings/settings.html">Settings</a></li>
         </ul>
     </nav>
